deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: $namespace
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-demo-app
  namespace: $namespace
  labels:
    app: k8s-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-demo-app
  template:
    metadata:
      name: k8s-demo-app
      labels:
        app: k8s-demo-app
    spec:
      containers:
      - name: k8s-demo-app
        image: agilestacks/k8s-demo-app
        ports:
        - name: http
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-app
  namespace: $namespace
  labels:
    app: k8s-demo-app
spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: k8s-demo-app
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-demo-app
  namespace: $namespace
  labels:
    app: k8s-demo-app
spec:
  rules:
  - host: $host
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-demo-app
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: update-demo
  namespace: $namespace
  labels:
    app: update-demo
spec:
  replicas: $replicas
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 1
  selector:
    matchLabels:
      app: update-demo
  template:
    metadata:
      name: update-demo
      labels:
        app: update-demo
        version: $version
    spec:
      containers:
      - name: update-demo
        image: gcr.io/google_containers/update-demo:$version
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          httpGet:
            port: http
          initialDelaySeconds: 1
        readinessProbe:
          httpGet:
            port: http
          initialDelaySeconds: 1
